# baikal-t-fwgen

./: CMakeLists.txt  README.md
src/: core.sh  fwgen
src/fw/: usb2640.sh
src/lib/: functions.sh
